# AKmerGWAS

./: MANIFEST.in  README.md  Readme.md  pyproject.toml  setup.py
akgwas/: cli.py
akgwas/config/: config.yaml
akgwas/workflow/rules/: alignment.smk  build.smk  kgwas.smk
akgwas/workflow/scripts/: QK_make.sh  gwasresul_collecet.sh  kmatrix_origin_build_V3.sh  kmer_alignment_Large_V3.sh  kmer_gemma_V3.sh  matrix_bed_multithreads_V3.sh
example/: arabi_sequence_url.txt  config.yaml  fof.txt  ref_list.txt  run.sh
example/pheno/: Arabi1135_ft10.txt  Arabi1135_ft16.txt
recipe/: meta.yaml
